# parallel-SAT

./: .gitignore  README.md
benchmarks/: scrape.sh
benchmarks/small_tests/: pure.cnf
cpu/: .gitignore  CMakeLists.txt
cpu/include/: pool.h  sat.h
cpu/lib/: pool.cpp  sat.cpp  sat_parallel.cpp
cpu/src/: solve.cpp
docs/: final_report.md  index.md  milestone.md  proposal.md
gpu/: .gitignore  CMakeLists.txt  detailed.csv  host_directed_decision_parallel.cu  host_directed_naive.cu  iter1.cu  iter2.cu  iter3.cu  iter3_detailed.csv  iter3_summary.csv  iter4.cu  main.cu  time.py  time2.py
gpu/csvs/: build1-iter3_detailed.csv  build1-iter3_summary.csv  build128-iter3_detailed.csv  build128-iter3_summary.csv  build16-iter3_detailed.csv  build16-iter3_summary.csv  build256-iter3_detailed.csv  build256-iter3_summary.csv  build512-iter3_detailed.csv  build512-iter3_summary.csv  build64-iter3_detailed.csv  build64-iter3_summary.csv  iter1_detailed.csv  iter1_no_pure_detailed.csv  iter1_no_pure_summary.csv  iter1_summary.csv
gpu/prof/: hddp_uuf125-01_mi1.ncu-rep  hddp_uuf125-01_mi8.ncu-rep  iter1_util.ncu-rep
